bin_PROGRAMS = bcc
bcc_SOURCES = analyze.cpp attributes.cpp codegen.cpp compiler.cpp numbers.cpp \
    main.cpp parser.cpp scan.cpp symbol_table.cpp treenode.cpp messages.cpp filename.cpp

noinst_HEADERS = analyze.h attributes.h codegen.h compiler.h definitions.h numbers.h \
    parser.h scan.h symbol_table.h treenode.h messages.h filename.h
