bin_PROGRAMS = bcc
bcc_SOURCES = analyze.cpp attributes.cpp codegen.cpp compiler.cpp loader.cpp \
    main.cpp parser.cpp scan.cpp symtab.cpp treenode.cpp util.cpp

noinst_HEADERS = analyze.h attributes.h codegen.h compiler.h definitions.h \
    globals.h loader.h parser.h scan.h symtab.h treenode.h util.h
